# wuziqi_client

./: .gitmodules  justfile  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/congyuwang/wuziqi/: MainActivity.kt
assets/game_field_themes/basic/: black_seed.riv  black_seed_pop.riv  white_seed.riv  white_seed_pop.riv
assets/themes/basic/: seed.riv
ios/Runner/: Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_generated.dart  bridge_generated.freezed.dart  game_field.dart  main.dart  seed_animation.dart  theme.dart
lib/pages/game_page/: game_field.dart  seed_field.dart
lib/themes/: field_background.dart  seed.dart  theme.dart
lib/themes/basic/: field_background.dart  provider.dart  seed.dart
macos/Runner/: bridge_generated.h
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml
native/native.xcodeproj/: project.pbxproj
native/src/: api.rs  bridge_generated.rs  lib.rs  structs.rs
