[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
webpki-roots = "0.22.3"
futures-rustls = "0.22.1"
rustls = "0.20.6"
wuziqi = { path = "../wuziqi" }
async-std = "1.10.0"
